[package]
name = "yts3"
version = "0.1.0"
edition = "2021"
description = "YouTube as S3 — encode arbitrary files into lossless video for cloud storage"
license = "MIT"
repository = "https://github.com/freddiev4/yts3"
keywords = ["video", "steganography", "ffmpeg", "encoding", "storage"]
categories = ["command-line-utilities", "multimedia::video", "cryptography"]

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# Cryptography
chacha20poly1305 = "0.10"
argon2 = "0.5"
rand = "0.8"

# Integrity
crc = "3"
sha2 = "0.10"

# Parallelism
rayon = "1"

# Progress
indicatif = "0.17"

# Error handling
anyhow = "1"
thiserror = "2"

# Serialization
byteorder = "1"

# Logging
log = "0.4"
env_logger = "0.11"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
